GNOME Bugzilla – Bug 375953
Missing files from POTFILES.in (pan2)
Last modified: 2006-11-16 21:22:00 UTC
http://progress.gnome.org/module/pan2 There are some missing files from POTFILES.in: * pan/gui/charset-picker.cc * pan/gui/pan-file-entry.cc * pan/tasks/nntp-pool.cc pan2 wasn't setup in bugzilla so I filed the bug against pan