http://bugzilla.gnome.org/show_bug.cgi?id=375953 Missing files from

http://bugzilla.gnome.org/show_bug.cgi?id=375953
Missing files from POTFILES.in (Daniel Nylander)

http://bugzilla.gnome.org/show_bug.cgi?id=373520
Crash when creating a new score, if no article is selected. (Carl Roth)

http://bugzilla.gnome.org/show_bug.cgi?id=373523
Thread scoring is too slow (Carl Roth)

http://bugzilla.gnome.org/show_bug.cgi?id=375405
Corrupted uudecode output with Pan 0.119 (Shantanu Goel)